; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_run_file.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_run_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"Loading file %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @run_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_file(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @jctx(i32* %5)
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @MP_VERBOSE(i32 %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @push_file_content(i32* %9, i8* %10, i32 -1)
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @js_tostring(i32* %14, i32 -1)
  %16 = call i32 @js_loadstring(i32* %12, i8* %13, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @js_copy(i32* %17, i32 0)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @js_call(i32* %19, i32 0)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @js_pop(i32* %21, i32 2)
  ret void
}

declare dso_local i32 @MP_VERBOSE(i32, i8*, i8*) #1

declare dso_local i32 @jctx(i32*) #1

declare dso_local i32 @push_file_content(i32*, i8*, i32) #1

declare dso_local i32 @js_loadstring(i32*, i8*, i32) #1

declare dso_local i32 @js_tostring(i32*, i32) #1

declare dso_local i32 @js_copy(i32*, i32) #1

declare dso_local i32 @js_call(i32*, i32) #1

declare dso_local i32 @js_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
